Fetch pending stream records via range instead of claim for compatibility